--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,20 @@
-{"name": "Daily Gain", "short_name": "DailyGain", "start_url": ".", "display": "standalone", "background_color": "#000000", "theme_color": "#000000"}
+{
+  "name": "Daily Gain - Bro Split Tracker",
+  "short_name": "DailyGain",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#f4f4f4",
+  "theme_color": "#2b2d42",
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
