--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "DailyGain",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#f4f4f4",
-  "theme_color": "#2b2d42",
+  "background_color": "#111",
+  "theme_color": "#222",
   "icons": [
     {
       "src": "icons/icon-192.png",
